--- a/blog/tsconfig.json
+++ b/blog/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
+    "outDir": "./api/out-tsc",
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
