--- a/blog/api/package.json
+++ b/blog/api/package.json
@@ -2,7 +2,7 @@
   "name": "server-node",
   "version": "1.0.0",
   "description": "",
-  "main": "app/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "run app": "node_modules/.bin/nodemon app"
@@ -12,9 +12,16 @@
   "dependencies": {
     "babel-core": "6.26.3",
     "babel-preset-es2015": "6.24.1",
-    "express": "4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "4.17.1",
+    "lodash": "4.17.15",
+    "mongodb": "3.5.7",
+    "mongoose": "5.9.12",
+    "mongoose-unique-validator": "2.0.3",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "cors": "^2.8.5",
     "nodemon": "^2.0.3"
   }
 }
